welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:35: error: value Yellow is not a member of object java.awt.Color
	faireV(Color.Yellow);
                     ^MethodsPicture:36: error: value Red is not a member of object java.awt.Color
	faireV(Color.Red);
                     ^MethodsPicture:37: error: value Blue is not a member of object java.awt.Color
	faireV(Color.Blue);
                     ^MethodsPicture:38: error: value Green is not a member of object java.awt.Color
	faireV(Color.Green);
                     ^